# DALia

./: .gitignore  CMakeLists.txt  CNAME  README.md
src/: CMakeLists.txt  test.cpp
src/inference/: classicalInferer.cpp  classicalInferer.h  i_inferer.h  i_rule.h
tests/: CMakeLists.txt  run_all_tests.cpp  test_main.cpp
tests/src/: CMakeLists.txt
tests/src/inference/: classicalInfererTest.cpp
